[project]
name = "advanced-rag-langgraph-agent"
version = "0.1.0"
description = "Production-ready Agentic RAG system using LangGraph, Qdrant, and RAGAS for self-correcting information retrieval."
authors = [
    {name = "nhatkhoanguyen",email = "nhatkhoanguyen204@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
